--- a/DL Theories.ipynb
+++ b/DL Theories.ipynb
@@ -11,6 +11,75 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Weighted Summation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Activation Function"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Linear\n",
+    "2. Heviside step \n",
+    "3. Sigmoid"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear \n",
+    "\n",
+    "f(v) = a+v - a(bias) , v (weighted sum) \n",
+    "\n",
+    "#### Heviside Step\n",
+    "\n",
+    "f(v) = either 1 or 0 - (1 if v>=a 0 otherwise) (a = thresold level) (v = weighted sum)\n",
+    "\n",
+    "#### Sigmoid function\n",
+    "\n",
+    "f(v) = 1/1+e(-v) (v = weighted sum)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feed Forward Network\n",
+    "\n",
+    "*   More hidden layers ensures more accuracy and precision\n",
+    "*   In this type of network no loops are created , feeds are forwarded without iterations\n",
+    "*   Output node takes heviside step as output activation function\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feedback Network\n",
+    "\n",
+    "*   Allows loops and feedbacks\n",
+    "*   Allows both side direction movement of information\n",
+    "*   Complex to implement. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
