Note Update Commit

--- a/DL Theories.ipynb
+++ b/DL Theories.ipynb
@@ -6,77 +6,26 @@
    "metadata": {},
    "source": [
     "#### Deep Learning\n",
-    "\n",
-    "DL is a machine learning technique where it learns about the feature and tasks directly from the data , we do not need to do any manual feature extraction , and these data can be images , texts and sounds."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Weighted Summation"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Activation Function"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Linear\n",
-    "2. Heviside step \n",
-    "3. Sigmoid"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Linear \n",
-    "\n",
-    "f(v) = a+v - a(bias) , v (weighted sum) \n",
-    "\n",
-    "#### Heviside Step\n",
-    "\n",
-    "f(v) = either 1 or 0 - (1 if v>=a 0 otherwise) (a = thresold level) (v = weighted sum)\n",
-    "\n",
-    "#### Sigmoid function\n",
-    "\n",
-    "f(v) = 1/1+e(-v) (v = weighted sum)\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Feed Forward Network\n",
-    "\n",
-    "*   More hidden layers ensures more accuracy and precision\n",
-    "*   In this type of network no loops are created , feeds are forwarded without iterations\n",
-    "*   Output node takes heviside step as output activation function\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Feedback Network\n",
-    "\n",
-    "*   Allows loops and feedbacks\n",
-    "*   Allows both side direction movement of information\n",
-    "*   Complex to implement. "
+    "##### ANN - Artificial Neural Network\n",
+    "* Neurons are the center point\n",
+    "* Dendrites are the reciever of signal for the neuron\n",
+    "* Axon is the transmitter of signal for the neuron\n",
+    "* Dendrites of one neuron is connected with axon of other neurons \n",
+    "* Signal from one neuron passes from it's axon and is recived by other neuron's dendrites , this is how transmission happen.\n",
+    "* While transmitting the axon deosn't really touch the dendrites , and this transmission point is called Synapse.\n",
+    "* In Machine learning The neuron gets the input from multiple inpur layers\n",
+    "* These input layers are neurons as well \n",
+    "* The point of receiving the input is called Synapse as described above\n",
+    "* All the input layers are independent variables\n",
+    "* Before processing the input layers to the neuron , we need to standardize/normalize them\n",
+    "* All the input variables here are of the same record. meaning for a single person's details the input variables can be his age , salary etc etc but in the end the input is for that person only\n",
+    "* Same way the output variable also stays for only one record only.\n",
+    "* Output variable can be continuous/binary/categorical(more than two)\n",
+    "* Every single input variable when being transmitted to the neuron via synapse is assigned a weight (similar to co efficient)\n",
+    "* This weight determines which signal/input is more important than others\n",
+    "* Once the signal is passed from the input variables to the Neuron , neuron does two things\n",
+    "    -   Calculate and stores the wighted sum of the input vraibles\n",
+    "    -   Perform activation function in these variable's weighte sum."
    ]
   },
   {
