data add commit

--- a/DL Theories.ipynb
+++ b/DL Theories.ipynb
@@ -24,14 +24,33 @@
     "* Every single input variable when being transmitted to the neuron via synapse is assigned a weight (similar to co efficient)\n",
     "* This weight determines which signal/input is more important than others\n",
     "* Once the signal is passed from the input variables to the Neuron , neuron does two things\n",
-    "    -   Calculate and stores the wighted sum of the input vraibles\n",
+    "    -   Calculate and stores the weighted sum of the input variables\n",
     "    -   Perform activation function in these variable's weighte sum."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* Activation Function\n",
+    "\n",
+    "    -   Thresold Function \n",
+    "        - This is a simple function , where the output is basically binary , 1 or 0. If the weighted sum value of input variable comes as less than zero then it passes on 0 in the output value/next neuron\n",
+    "        - If the value turns out more than 0 then we pass 1 to the ouput value/next neuron\n",
+    "    -   Sigmoid Function \n",
+    "        - Unlike Thresold function , the sigmoid function's separation is curved and here any output value that comes below zero gets dropped off and value more than is calculated in near aproximity of 1.\n",
+    "    -   Rectifier Function\n",
+    "        - In this function the graph from 0 to 1 is a linear growth curve , however the section of 0 remains flat..\n",
+    "    -   Hyperbolic Tangent Function(tanh)\n",
+    "        - This function is similar to the sigmoid function but in here the classification is not bound within 0 and 1. In spreads from 1,0,-1\n",
+    "\n",
+    "* Generic Statement -\n",
+    "    -   In the hidden layer , rectifier activation function is used\n",
+    "    -   In the output layer we use sigmoid fuction.\n",
+    "\n",
+    "* ANN Learning Process -\n",
+    "    -   Back Propagation - neural networks predicts an out put , the same out is compared with actual data present. The differnece between actual and predicted forms the cost function. To reduce the cost function and improve the accuracy of the model the neurons send data backwards to the input layer , where weights/co efficient values of input varibles are adjusted to reduce cost function."
+   ]
   }
  ],
  "metadata": {
